name:                massiv
version:             0.1.0.0
synopsis:            Simple multi-dimensional Arrays
description:         Massiv (Массив) is a Russian word for an Array.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          lehins@yandex.ru
copyright:           2017 Alexey Kuleshevich
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Array.Massiv
                     , Data.Array.Massiv.Common
                     , Data.Array.Massiv.Convolution
                     , Data.Array.Massiv.Delayed
                     , Data.Array.Massiv.Index
                     , Data.Array.Massiv.Manifest
                     , Data.Array.Massiv.Manifest.Unboxed
                     , Data.Array.Massiv.Windowed
                     , Data.Array.Massiv.Manifest.Loading
  other-modules:       Data.Array.Massiv.Manifest.Gang
  build-depends:       base >= 4.6 && < 5
                     , deepseq
                     , primitive
                     , stm
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark loops
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Loops.hs
  ghc-options:         -threaded -O2
  build-depends:       base
                     , criterion
                     , massiv
                     , vector
                     , repa
  default-language:    Haskell2010

benchmark fusion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Fusion.hs
  ghc-options:         -threaded -O2
  build-depends:       base
                     , criterion
                     , deepseq
                     , massiv
                     , vector
  default-language:    Haskell2010

benchmark compute
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             ComputeSeq.hs
  other-modules:       Compute
  ghc-options:         -threaded -O2
  build-depends:       base
                     , criterion
                     , massiv
                     , vector
                     , repa
  default-language:    Haskell2010

benchmark compute-par
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             ComputePar.hs
  other-modules:       Compute
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N6 -O2
  build-depends:       base
                     , criterion
                     , massiv
                     , repa
                     , vector
  default-language:    Haskell2010

benchmark filtering
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Filtering.hs
  other-modules:       Compute
  ghc-options:         -threaded -O2
  build-depends:       base
                     , criterion
                     , massiv
                     , vector
                     , repa
  default-language:    Haskell2010

benchmark convolution
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Convolution.hs
  other-modules:       Compute
                     , VectorConvolve
  ghc-options:         -threaded -O2
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N6 -O2
  --ghc-options:         -threaded -O2 -fvia-C -optc-O3 -D64
  --ghc-options:         -fllvm -optlo-O3 -Odph -fno-liberate-case -funfolding-use-threshold100 -funfolding-keeness-factor100

  build-depends:       base
                     , criterion
                     , deepseq
                     , massiv
                     , repa >= 3.4.1.2
                     , repa-algorithms >= 3.4.1.1
                     , vector
                     , primitive
  default-language:    Haskell2010

-- executable sobel-profile
--   hs-source-dirs:      app
--                      , bench
--   main-is:             Main.hs
--   other-modules:       Compute
--                      , VectorConvolve
--   build-depends:       base
--                      , massiv
--                      , vector
--                      , time
--                      , repa
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
--   --ghc-options:         -Wall -O2 -threaded -prof -fprof-auto

source-repository head
  type:     git
  location: https://github.com/lehins/prim-vector
