name:                massiv
version:             0.1.0.0
synopsis:            Simple multi-dimensional Arrays
description:         Massiv (Масси́в) is a Russian word for an Array.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          lehins@yandex.ru
copyright:           2017 Alexey Kuleshevich
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Array.Massiv
                     , Data.Array.Massiv.Common
                     , Data.Array.Massiv.Common.Index
                     , Data.Array.Massiv.Common.Shape
                     , Data.Array.Massiv.Compute
                     , Data.Array.Massiv.Compute.Gang
                     , Data.Array.Massiv.Compute.Scheduler
                     , Data.Array.Massiv.Delayed
                     , Data.Array.Massiv.Delayed.Windowed
                     , Data.Array.Massiv.Manifest
                     , Data.Array.Massiv.Manifest.Unboxed
                     , Data.Array.Massiv.Manifest.Storable
                     , Data.Array.Massiv.Manifest.Primitive
                     , Data.Array.Massiv.Stencil
                     , Data.Array.Massiv.Stencil.Convolution
  other-modules:       Data.Array.Massiv.Stencil.Internal
  build-depends:       base >= 4.6 && < 5
                     , deepseq
                     , data-default
                     , primitive
                     , stm
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark loops
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Loops.hs
  ghc-options:         -threaded -O2
  build-depends:       base
                     , criterion
                     , massiv
                     , vector
                     , repa
  default-language:    Haskell2010

-- benchmark fusion
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Fusion.hs
--   ghc-options:         -threaded -O2
--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , massiv
--                      , vector
--   default-language:    Haskell2010

benchmark compute
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             ComputeSeq.hs
  other-modules:       Compute
  ghc-options:         -threaded -O2
  build-depends:       base
                     , criterion
                     , massiv
                     , vector
                     , repa
  default-language:    Haskell2010

benchmark compute-par
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             ComputePar.hs
  other-modules:       Compute
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N8 -O2
  build-depends:       base
                     , criterion
                     , massiv
                     , repa
                     , vector
  default-language:    Haskell2010

-- benchmark filtering
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Filtering.hs
--   other-modules:       Compute
--   ghc-options:         -threaded -O2
--   build-depends:       base
--                      , criterion
--                      , massiv
--                      , vector
--                      , repa
--   default-language:    Haskell2010

benchmark convolution
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Convolution.hs
  other-modules:       Compute
                     , VectorConvolve
  ghc-options:         -threaded -O2

  build-depends:       base
                     , criterion
                     , massiv
                     , primitive
                     , repa >= 3.4.1.2
                     , vector
  default-language:    Haskell2010

benchmark convolution-par
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             ConvolutionPar.hs
  other-modules:       Compute
                     , VectorConvolve
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N6 -O2

  build-depends:       base
                     , criterion
                     , deepseq
                     , massiv
                     , repa >= 3.4.1.2
                     , repa-algorithms >= 3.4.1.1
                     , vector
                     , primitive
  default-language:    Haskell2010

executable sobel-profile
  hs-source-dirs:      app
                     , bench
  main-is:             Main.hs
  other-modules:       Compute
                     , VectorConvolve
  build-depends:       base
                     , massiv
                     , vector
                     , time
                     , repa
  default-language:    Haskell2010
--   ghc-options:         -threaded -O2
  --ghc-options:         -threaded -O2 -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N6 -O2
  --ghc-options:         -Wall -O2 -threaded -prof -fprof-auto

Test-Suite massiv-tests
  Type:               exitcode-stdio-1.0
  HS-Source-Dirs:     tests
  Main-Is:            Spec.hs
  Other-Modules:      Data.Array.Massiv.Common.IndexSpec
                    , Data.Array.Massiv.Common.ShapeSpec
                    , Data.Array.Massiv.CommonSpec
                    , Data.Array.Massiv.DelayedSpec
                    , Data.Array.Massiv.ManifestSpec
                    , Data.Array.MassivSpec
  Build-Depends:      base            >= 4.5 && < 5
                    , massiv
                    , hspec
                    , QuickCheck
  Default-Language:   Haskell2010
  GHC-Options:        -Wall -O2 -fno-warn-orphans -threaded -with-rtsopts=-N6

source-repository head
  type:     git
  location: https://github.com/lehins/prim-vector
