name:                prim-vector
version:             0.1.0.0
synopsis:            Vector implementation based on ByteArray
description:         Vector implementation based on ByteArray
homepage:            https://github.com/lehins/prim-vector
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          lehins@yandex.ru
copyright:           2017 Alexey Kuleshevich
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Vector.Prim
                     , Data.Vector.Prim.Mutable
  other-modules:       Data.Vector.Prim.Internal
  build-depends:       base >= 4.7 && < 5
                     , primitive
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/prim-vector
