name:                massiv-bench
version:             0.1.0.0
synopsis:            Benchmarks for Massiv library.
description:         Collection of benchmarks for various functions from massiv library and
                     examples implemented on top of it.
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          lehins@yandex.ru
copyright:           2017-2021 Alexey Kuleshevich
category:            Data, Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Bench
                     , Data.Massiv.Bench.Common
                     , Data.Massiv.Bench.Sobel
                     , Data.Massiv.Bench.Matrix
                     , Data.Massiv.Bench.Vector
  build-depends:       base            >= 4.8 && < 5
                     , criterion
                     , data-default
                     , deepseq
                     , massiv
                     , random >= 1.2
                     , scheduler
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark any-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             AnyAll.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N8
  build-depends:       base
                     , criterion
                     , massiv
                     , vector
  default-language:    Haskell2010

benchmark sum
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Sum.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N6
  build-depends:       base
                     , criterion
                     , massiv
                     -- , massiv-simd
                     , massiv-bench
  default-language:    Haskell2010

benchmark plus
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Plus.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark mult
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Mult.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark vector
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Vector.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark arithmetic
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Arithmetic.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark minmax
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             MinMax.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark sobel
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Sobel.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark integral
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Integral.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark upsample
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Upsample.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark append
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Append.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
                     , vector
                     , dlist
  default-language:    Haskell2010

benchmark concat
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Concat.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-bench
                     , scheduler
                     , vector
  default-language:    Haskell2010

benchmark filter
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Filter.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
                     , vector
  default-language:    Haskell2010

benchmark grid
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Grid.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , scheduler
                     , massiv-bench
  default-language:    Haskell2010

benchmark mutable
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Mutable.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , massiv
                     , massiv-bench
                     , vector
  default-language:    Haskell2010

benchmark traverse
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Traverse.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-bench
                     , vector
                     , primitive
                     , transformers
  default-language:    Haskell2010

benchmark list
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             List.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-bench
                     , vector
                     , primitive
                     , random
  default-language:    Haskell2010

-- benchmark fuse-seq
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             FuseSeq.hs
--   ghc-options:         -Wall -threaded -O2
--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , massiv-bench
--                      , vector
--                      , repa
--                      , repa-algorithms
--   default-language:    Haskell2010

-- benchmark convolve-seq
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             ConvolveSeq.hs
--   ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , massiv-bench
--                      , vector
--                      , repa
--                      , repa-algorithms
--   default-language:    Haskell2010


benchmark stencil
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Stencil.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N7
  build-depends:       base
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

-- benchmark maximum
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Maximum.hs
--   ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N7
--   build-depends:       base
--                      , bytestring
--                      , criterion
--                      , massiv
--                      , massiv-bench
--                      , vector
--                      , repa
--   default-language:    Haskell2010

-- benchmark bytestring
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             ByteString.hs
--   ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N7
--   build-depends:       base
--                      , bytestring
--                      , criterion
--                      , massiv
--                      , massiv-bench
--                      , random
--                      , repa
--   default-language:    Haskell2010

-- benchmark loops
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Loops.hs
--   ghc-options:         -Wall -threaded -O2
--   build-depends:       base
--                      , criterion
--                      , massiv
--                      , vector
--                      , repa
--   default-language:    Haskell2010

-- benchmark index
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Index.hs
--   ghc-options:         -Wall -threaded -O2
--   build-depends:       base
--                      , criterion
--                      , massiv
--                      , repa
--   default-language:    Haskell2010

-- benchmark compute-par
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             ComputePar.hs
--   other-modules:       CommonMassiv
--                      , CommonRepa
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N6 -Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3
--   build-depends:       base
--                      , criterion
--                      , massiv
--                      , repa
--                      , repa-algorithms
--                      , vector
--   default-language:    Haskell2010

-- benchmark filtering
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Filtering.hs
--   other-modules:       Compute
--   ghc-options:         -Wall -threaded -O2
--   build-depends:       base
--                      , criterion
--                      , massiv
--                      , vector
--                      , repa
--   default-language:    Haskell2010

-- benchmark convolution-seq
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             Convolution.hs
--   other-modules:       CommonMassiv
--                      , CommonRepa
--   ghc-options:         -Wall -threaded -O2

--   build-depends:       base
--                      , criterion
--                      , massiv
--                      , primitive
--                      , repa
--                      , repa-algorithms
--                      , vector
--   default-language:    Haskell2010

-- benchmark convolution-par
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      bench
--   main-is:             ConvolutionPar.hs
--   other-modules:       CommonMassiv
--                      , CommonRepa
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N6 -O2
--                        ---Odph -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3

--   build-depends:       base
--                      , criterion
--                      , deepseq
--                      , massiv
--                      , repa
--                      , repa-algorithms
--                      , vector
--                      , primitive
--   default-language:    Haskell2010

-- executable massiv
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , massiv
--                      -- , time
--   default-language:    Haskell2010
--   --ghc-options:         -O2 -fllvm
--   -- ghc-options:         -Wall -threaded -O2 -ddump-simpl-stats
--   --ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N7 -O2
--   --ghc-options:         -Wall -O2 -Wall -threaded -prof -fprof-auto
--   ghc-options:         -Wall -threaded -O2 -ddump-simpl -dsuppress-idinfo -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes

source-repository head
  type:     git
  location: https://github.com/lehins/massiv
